--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 //file:noinspection SpellCheckingInspection
 //file:noinspection GroovyAssignabilityCheck
 
+
 buildscript {  // for "com.github.ben-manes.versions" plugin
     repositories {
         maven {
@@ -12,22 +13,26 @@ buildscript {  // for "com.github.ben-manes.versions" plugin
     }
 }
 
-apply plugin: "com.github.ben-manes.versions"   //  ./gradlew dependencyUpdates 
+plugins {
+    id 'java'
+    id 'groovy'
+}
 
-apply plugin: 'groovy'
-apply plugin: 'java'
+apply plugin: "com.github.ben-manes.versions"   //  ./gradlew dependencyUpdates
+
 
 group = 'cz.siret'
-version = '2.5-dev.6.biojava71'
+version = '2.5-dev.7'
 
 description = 'Ligand binding site prediction based on machine learning.'
 
 
-allprojects {
-    apply plugin: 'java'
-    sourceCompatibility = 17
-    targetCompatibility = 17
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
+
+def distroDir = "$projectDir/distro"
 
 repositories {
     mavenCentral()
@@ -48,29 +53,29 @@ sourceSets {
     }
 }
 
+
 processResources {
     filter org.apache.tools.ant.filters.ReplaceTokens, tokens: [
             "project_version": project.version
     ]
 }
 
-task copyDependenciesToDist( type: Copy ) {
-    into "$buildDir/../distro/bin/lib"
+tasks.register('copyDependenciesToDist', Copy) {
     from configurations.runtimeClasspath
-
+    into "$distroDir/bin/lib"
 }
 
-task copyBinaryToDist( type: Copy ) {
+tasks.register('copyBinaryToDist', Copy) {
     dependsOn jar
 
-    into "$buildDir/../distro/bin"
-    from "$buildDir/bin"
+    from "$projectDir/build/bin"
+    into "$distroDir/bin"
     include "*.jar"
 }
 
-task copyDocumentation( type: Copy ) {
-    into "$buildDir/../distro/"
-    from "$buildDir/../"
+tasks.register('copyDocumentation', Copy) {
+    from "$distroDir/../"
+    into "$distroDir"
     include "README.md", "LICENSE.txt"
 }
 
@@ -91,8 +96,8 @@ jar {
 }
 
 clean {
-    delete "$buildDir/../distro/bin"
-    delete "$buildDir/../distro/test_output"
+    delete "$distroDir/bin"
+    delete "$distroDir/test_output"
 }
 
 test {
@@ -104,7 +109,7 @@ test {
     // set heap size for the test JVM(s)
     maxHeapSize = "2g"
     
-    def distroDir = "$project.projectDir/distro"
+
     inputs.dir "$distroDir/test_data"
     inputs.files("$distroDir/models", "$distroDir/config/default.groovy")
 
@@ -122,7 +127,6 @@ test {
         showStackTraces true
 
         showStandardStreams = false
-//        showStandardStreams = true
     }
 
     // listen to standard out and standard error of the test JVM(s)
@@ -149,7 +153,7 @@ static def maturityLevel(String version) {
     def qualifiersRegex = qualifiers.collect { /(?i).*[.\-]$it[.\-\d]*/ }
 
     def index = qualifiersRegex.findIndexOf { version ==~ it }
-    return (index < 0) ? qualifiers.size : index
+    return (index < 0) ? qualifiers.size() : index
 }
 
 tasks.named("dependencyUpdates").configure {
@@ -198,4 +202,5 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+
 }
