--- a/build.gradle
+++ b/build.gradle
@@ -185,8 +185,8 @@ dependencies {
     implementation 'us.ihmc:euclid:0.21.0'
 
     implementation 'org.slf4j:slf4j-api:2.0.13'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.23.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
     implementation 'org.slf4j:jul-to-slf4j:2.0.13'         // for netlib logging messages
 
     implementation 'org.biojava:biojava-core:7.1.1'
